frontend-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: us.gcr.io/fair-portal-451506-u2/react-app
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-lb
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
  - port: 80
    targetPort: 3000
