frontend-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # For spring boot backend
    nginx.ingress.kubernetes.io/cors-allow-origin: "*" # Adjust as needed for production
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true" #If you need credentials
spec:
  rules:
  - host: rd.ecommerce.app # Replace with your domain
    http:
      paths:
      - path: / # Backend API path
        pathType: Prefix
        backend:
          service:
            name: product-service # Your Spring Boot service name
            port:
              number: 8082 # Spring Boot service port
      - path: / # React frontend path
        pathType: Prefix
        backend:
          service:
            name: react-app-lb # Your React frontend service name
            port:
              number: 3000 # React frontend service port
